cmake_minimum_required(VERSION 3.14)
project(PC2POOAlonso)

set(CMAKE_CXX_STANDARD 14)

add_executable(PC2POOAlonso main.cpp Defense.cpp Defense.h Elude.cpp Elude.h Shield.cpp Shield.h Armor.cpp Armor.h Attack.cpp Attack.h Punch.cpp Punch.h Saber.cpp Saber.h Firearm.cpp Firearm.h Fighter.cpp Fighter.h BruceLee.cpp BruceLee.h ChuckNorris.cpp ChuckNorris.h JasonStatham.cpp JasonStatham.h Arena.cpp Arena.h Fight.cpp Fight.h)